fixed code finding earth days in a martian year

--- a/part_2_mars_weather.ipynb
+++ b/part_2_mars_weather.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1119,7 @@
        " ...]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
        "4  46       2012-08-20  14  157     6    -74.0    740.0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
        "12"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
        "1867"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,17 +1407,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "month\n",
+       "1    -77.160920\n",
+       "2    -79.932584\n",
+       "3    -83.307292\n",
+       "4    -82.747423\n",
+       "5    -79.308725\n",
+       "6    -75.299320\n",
+       "7    -72.281690\n",
+       "8    -68.382979\n",
+       "9    -69.171642\n",
+       "10   -71.982143\n",
+       "11   -71.985507\n",
+       "12   -74.451807\n",
+       "Name: min_temp, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 3. What is the average minimum temperature by month?\n",
-    "avg_min_temp_by_month = mars_df.groupby('month')['min_temp'].mean()"
+    "avg_min_temp_by_month = mars_df.groupby('month')['min_temp'].mean()\n",
+    "avg_min_temp_by_month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1483,17 +1508,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "month\n",
+       "1     862.488506\n",
+       "2     889.455056\n",
+       "3     877.322917\n",
+       "4     806.329897\n",
+       "5     748.557047\n",
+       "6     745.054422\n",
+       "7     795.105634\n",
+       "8     873.829787\n",
+       "9     913.305970\n",
+       "10    887.312500\n",
+       "11    857.014493\n",
+       "12    842.156627\n",
+       "Name: pressure, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. What is the average pressure by month?\n",
-    "avg_pressure_by_month = mars_df.groupby('month')['pressure'].mean()"
+    "avg_pressure_by_month = mars_df.groupby('month')['pressure'].mean()\n",
+    "avg_pressure_by_month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1589,7 @@
     "# Identify the lowest and highest pressure months in Curiosity's location by sorting the previous graph\n",
     "\n",
     "# Sort the DatasFrame by average pressure\n",
-    "sorted_avg_pressure_by_month = avg_pressure_by_month.sort_value()\n",
+    "sorted_avg_pressure_by_month = avg_pressure_by_month.sort_values()\n",
     "\n",
     "# Plot the sorted data\n",
     "sorted_avg_pressure_by_month.plot(kind='bar', title='Sorted Avg. Pressure by Month on Mars')\n",
@@ -1556,14 +1606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are approximately 1 Earth days in a Martian year.\n"
+      "There are approximately 687 Earth days in a Martian year.\n"
      ]
     },
     {
@@ -1584,14 +1634,14 @@
     "# Sort the DataFrame by 'terrestrial_date'\n",
     "mars_df = mars_df.sort_values('terrestrial_date')\n",
     "\n",
-    "# Find all occurrences of 'ls' = 0\n",
-    "ls_zero_dates = mars_df.loc[mars_df['ls'] == 0, 'terrestrial_date']\n",
+    "# Find all occurrences of 'ls' = 0, sort by date\n",
+    "ls_zero_dates = mars_df.loc[mars_df['ls'] == 0, 'terrestrial_date'].sort_values()\n",
     "\n",
-    "# Find the first occurrence of 'ls' = 0\n",
+    "# Get the first occurrence of 'ls' = 0\n",
     "start_date = ls_zero_dates.iloc[0]\n",
     "\n",
-    "# Get the next occurrence of 'ls' = 0 after the first one\n",
-    "end_date = ls_zero_dates[ls_zero_dates > start_date].iloc[0]\n",
+    "# Get the next occurrence of 'ls' = 0 after the first one and at least 300 Earth days later\n",
+    "end_date = ls_zero_dates[ls_zero_dates > start_date + pd.Timedelta(days=300)].iloc[0]\n",
     "\n",
     "# Calculate the number of Earth days in a Martian year\n",
     "martian_year_days = (end_date - start_date).days\n",
@@ -1614,9 +1664,9 @@
    "source": [
     "#### Minimum Temperature\n",
     "\n",
-    "- Based on the data, the coldest month on Mars at Curiosity's location is Month 3, which has the lowest average minimum temperature.\n",
+    "- Based on the data, the coldest month on Mars at Curiosity's location is Month 3, which has the lowest average minimum temperature of -83.307292°C\n",
     "\n",
-    "- The warmest month is Month 8, which has the highest average minimum temperature."
+    "- The warmest month is Month 8, which has the highest average minimum temperature of -68.382979°C."
    ]
   },
   {
@@ -1625,8 +1675,8 @@
    "metadata": {},
    "source": [
     "#### Atmospheric Pressure\n",
-    "- The lowest atmospheric pressure occurs in Month 6.\n",
-    "- The highest atmospheric pressure occurs in Month 9."
+    "- The lowest atmospheric pressure occurs in Month 6 with 745.054422 Pa.\n",
+    "- The highest atmospheric pressure occurs in Month 9 with 913.305970 Pa."
    ]
   },
   {
@@ -1651,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
